--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <audio src="%PUBLIC_URL%/TheirTime.mp3" autoplay loop></audio>
+    <audio id="music" src="%PUBLIC_URL%/TheirTime.mp3" autoplay loop></audio>
     <div id="root"></div>
     <!--
       This HTML file is a template.
